day 1! made header and hero

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 	font-weight: 400;
 
 	background-color: rgba(255, 255, 255, 0.87);
-	color: #242424;
+	color: black;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -14,5 +14,8 @@
 
 body {
 	margin: 0;
-	display: flex;
+	display: block;
+	box-sizing: border-box;
+	min-height: 100vh;
+	background-color: #ef491f;
 }
